[package]
name = "rawdog"
version = "0.1.0"
edition = "2021"
description = "Raw files in, JPEGs out. No Lightroom, no fuss."
license = "MIT"

[dependencies]
rawloader = "0.37"
imagepipe = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
anyhow = "1"
indicatif = "0.17"
